--- a/tyylit/search.css
+++ b/tyylit/search.css
@@ -40,3 +40,27 @@
     font-size: 16px;
     cursor: pointer;
 }
+#sliderDiv{
+    margin: auto;
+    max-width: 700px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: 12px 16px 12px 16px;
+}
+#slider{
+    width: 40%;
+    -webkit-appearance: none;
+    background-color: #216477;
+    outline: none;
+    border-radius: 10px;
+}
+
+#nearMeCheckbox{
+    margin-right: 20px;
+    width: 25px;
+    height: 25px;
+}
+#nearMeCheckboxText{
+    margin-right: 10px;
+}
