--- a/tyylit/search.css
+++ b/tyylit/search.css
@@ -32,17 +32,19 @@
     justify-content: center;
     padding: 12px 16px 12px 16px;
 }
-.categoriesButton{
+.categoriesCheckbox{
     margin-left: 12px;
     margin-right: 12px;
     padding-top: 4px;
-    padding-left: 8px;
+    padding-left: 10%;
     font-size: 16px;
     cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
 
 #nearMeCheckbox{
-    margin-right: 20px;
+    margin-left: 10%;
     width: 30px;
     height: 30px;
 }
