--- a/tyylit/restarauntList.css
+++ b/tyylit/restarauntList.css
@@ -8,16 +8,17 @@
     padding: 1px;
     margin: 1%;
     display: flex;
+    justify-content: space-between;
     }
 
 #ravintolaValikko li a {
-    margin-left: 7%;
-    margin-top: 2.5%;
+    width: 30%;
 }
 
 #ravintolaValikko h4 {
     text-align: center;
 }
 #ravintolaValikko li p {
-    margin-left: 7%;
+   width: 30%;
+   margin-left: 20%;
 }
