--- a/tyylit/search.css
+++ b/tyylit/search.css
@@ -49,12 +49,21 @@
     height: 30px;
 }
 
-#slider{
+#myRange{
     box-sizing: border-box;
     margin: auto;
     width: 60%;
     align-items: center;
     justify-content: center;
     display: flex;
-    padding: 12px 16px 12px 16px;
+    padding: 26px 0px 26px 0px;
+}
+
+#sliderVal{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+#sliderText{
+    text-align: center;
 }
