--- a/tyylit/search.css
+++ b/tyylit/search.css
@@ -1,167 +1,161 @@
 body {
-    margin: 2%;
-    margin-left: 20%;
-    margin-right: 20%;
-    justify-content: space-between;
-  }
-.searchBox{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  margin: 2%;
+  margin-left: 20%;
+  margin-right: 20%;
+  justify-content: space-between;
 }
-.searchField{
-    width: 100%;
-    font-size: 16px;
-    box-sizing: border-box;
-    text-align: center;
-    padding: 12px 20px 12px 20px;
-    border-radius: 4px;
+.searchBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.searchButton{
-    float: right;
-    margin-left: 16px;
-    border-radius: 4px;
-    cursor: pointer;
+.searchField {
+  width: 100%;
+  font-size: 16px;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 12px 20px 12px 20px;
+  border-radius: 4px;
 }
-.searchButton:hover{
-    background: gray;
+.searchButton {
+  float: right;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 1%;
 }
-.categories{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.searchButton:hover {
+  background: gray;
 }
-.categoriesCheckbox{
-    margin-left: 12px;
-    padding-top: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
+.categories {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-#nearMeCheckbox{
-    width: 30px;
-    height: 30px;
+.categoriesCheckbox {
+  margin-left: 12px;
+  padding-top: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
 }
 
-#myRange{
-    box-sizing: border-box;
-    margin: auto;
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    padding: 26px 0px 26px 0px;
+#nearMeCheckbox {
+  width: 30px;
+  height: 30px;
 }
-#sliderVal{
-    align-items: center;
-    justify-content: center;
-    display: flex;
+
+#myRange {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
-#sliderText{
-    text-align: center;
+#sliderVal {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#sliderText {
+  text-align: center;
 }
 
 @media only screen and (max-width: 620px) {
-    .searchBox{
-        width: 100%;
-
-    }
-    .searchButton:hover{
-        width: 100%;
-    }
-    .searchField{
-        width: 100%;
-        margin-bottom: 3%;
-        font-size: small;
-    }
-    .searchButton{
-        width: 20%;
-        font-size: x-small;
-    }
-    .categories{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        margin-top: 3%;
-        padding: 5px;
-    }
-    .categoriesCheckbox{
-        width: 50%;
-    }
-    #nearMeCheckbox{
-        width: 50%;
-    }
-    #myRange{
-        width: 50%;
-    }
-    #sliderVal{
-        width: 100%;
-    }
-    #sliderText{
-        width: 100%;
-    }
-
+  .searchBox {
+    width: 100%;
+  }
+  .searchButton:hover {
+    width: 100%;
+  }
+  .searchField {
+    width: 100%;
+    margin-bottom: 3%;
+    font-size: small;
+  }
+  .searchButton {
+    width: 20%;
+    font-size: x-small;
+  }
+  .categories {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 3%;
+    padding: 5px;
+  }
+  .categoriesCheckbox {
+    width: 50%;
+  }
+  #nearMeCheckbox {
+    width: 50%;
+  }
+  #myRange {
+    background-color: aqua;
+  }
+  #sliderVal {
+    width: 100%;
+  }
+  #sliderText {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 960px) {
-    .searchBox{
-        width: 100%;
-        display: block;
-        padding:3px;
-    }
-    .searchButton:hover{
-        width: 100%;
-    }
-    .searchField{
-        width: 100%;
-        font-size: small;
-        margin-bottom: 3%;
-    }
-    .searchButton{
-        width: 100%;
-        font-size: medium;
-        margin: 0;
-        
-    }
-    .categories{
-        width: 100%;
-        display: flex;
-        margin-top: 3%;
-        padding: 0;
-    }
-    .categoriesCheckbox{
-        width:10%;
-        margin:0;
-    }
-    #nearMeCheckbox{
-        width:10%;
-        margin:0;
-    }
-    #myRange{
-        width:10%;
-        margin:0;
-    }
-    #sliderVal{
-        display: flex;
-        width:100%;
-        margin:0;
-        
-    }
-    #sliderToggle {
-        display: flex;
-    }
-    #sliderText{
-        width:100%;
-        margin:0;
-        font-size: small;
-    }
-    #text {
-        display: inline-block;
-        justify-content: center;
-        font-size: small;
-        margin: 1%;
-    }
+  .searchBox {
+    width: 100%;
+    display: block;
+    padding: 3px;
+  }
+  .searchButton:hover {
+    width: 100%;
+  }
+  .searchField {
+    width: 100%;
+    font-size: small;
+    margin-bottom: 3%;
+  }
+  .searchButton {
+    width: 100%;
+    font-size: medium;
+    margin: 0%;
+    padding: 5px;
+  }
+  .categories {
+    width: 100%;
+    display: flex;
+    margin-top: 3%;
+    padding: 0;
+  }
+  .categoriesCheckbox {
+    width: 10%;
+    margin: 0;
+  }
+  #nearMeCheckbox {
+    width: 10%;
+    margin: 0;
+  }
+  #myRange {
+    width: 100;
+  }
+  #sliderVal {
+    display: flex;
+    width: 100%;
+    margin: 0;
+  }
+  #sliderToggle {
+    display: flex;
+  }
+  #sliderText {
+    width: 100%;
+    margin: 0;
+    font-size: small;
+  }
+  #text {
+    display: inline-block;
+    justify-content: center;
+    font-size: small;
+    margin: 1%;
+  }
 }
