--- a/tyylit/search.css
+++ b/tyylit/search.css
@@ -1,8 +1,14 @@
+html {
+  font-family: "Barlow", sans-serif;
+}
 body {
   margin: 2%;
   margin-left: 20%;
   margin-right: 20%;
   justify-content: space-between;
+  border: 1px solid #fff;
+  box-shadow: 0.1rem 0.1rem 0.5rem 0.5rem #5687;
+  padding: 10px;
 }
 .searchBox {
   display: flex;
@@ -21,7 +27,9 @@ body {
   float: right;
   border-radius: 4px;
   cursor: pointer;
-  margin: 1%;
+  padding: 0px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .searchButton:hover {
   background: gray;
@@ -51,6 +59,7 @@ body {
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2%;
 }
 #sliderVal {
   align-items: center;
@@ -59,6 +68,16 @@ body {
 }
 #sliderText {
   text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  background-color: #216477;
+  text-align: center;
+  padding: 1px;
+  margin-top: 3%;
+  color: #fff;
 }
 
 @media only screen and (max-width: 620px) {
