--- a/tyylit/style.css
+++ b/tyylit/style.css
@@ -1,26 +1,28 @@
 html {
   font-family: "Barlow", sans-serif;
   max-height: 100vh;
+  margin:auto;
 }
 
 body {
-  margin: 2%;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 15%;
+  margin-right: 15%;
   justify-content: space-between;
+  justify-content: space-between;
+  border: 1px solid #fff;
+  box-shadow: 0.1rem 0.1rem 0.5rem 0.5rem #5687;
+  padding: 10px;
 }
 header {
   background-color: #216477;
   text-align: center;
   padding: 1px;
-  margin-top: 1%;
   color: #fff;
 }
 footer {
   background-color: #216477;
   text-align: center;
   padding: 1px;
-  margin-top: 1%;
   color: #fff;
 }
 main {
@@ -60,6 +62,11 @@ main {
 
 .list-a a:hover {
   background-color: #12313a;
+}
+
+#map {
+  height: 400px;
+  max-height: 400px;
 }
 
 /*NavBar styles*/
