--- a/tyylit/infoSivu.css
+++ b/tyylit/infoSivu.css
@@ -44,9 +44,7 @@ main {
 }
 
 article {
-  /* width: calc(100% / 3 - 2rem); */
   width: 30%;
-  padding: 1rem;
   box-sizing: border-box;
 }
 
@@ -67,7 +65,7 @@ figure {
 }
 
 figure img {
-  width: 200px;
+  width: 220px;
   max-height: 90%;
   max-width: 100%;
   height: 300px;
@@ -76,6 +74,10 @@ figure img {
 figcaption {
   text-align: center;
 }
+article p {
+  text-align: center;
+}
+/*kuvacss*/
 .nav-bar-list {
   float: left;
   border-right: 1px solid #bbb;
@@ -102,3 +104,51 @@ figcaption {
 }
 
 /*NavBar styles*/
+/* For mobile phones: */
+@media only screen and (max-width: 620px) {
+  .list-a a:hover,
+  .list-a,
+  .nav-bar-list,
+  .nav-bar {
+    width: 100%;
+    border-bottom: 1px solid #bbb;
+    text-align: left;
+    color: #fff;
+  }
+  .nav-bar-list-right {
+    width: 100%;
+    border-bottom: 1px solid #bbb;
+    text-align: left;
+  }
+  main {
+    display: block;
+  }
+  article {
+    width: 90%;
+  }
+}
+/* For mobile phones: */
+
+/* For tablets*/
+@media only screen and (max-width: 960px) {
+  .list-a a:hover,
+  .list-a,
+  .nav-bar-list,
+  .nav-bar {
+    width: 100%;
+    border-bottom: 1px solid #bbb;
+    text-align: left;
+  }
+  .nav-bar-list-right {
+    width: 100%;
+    border-bottom: 1px solid #bbb;
+    text-align: left;
+  }
+  main {
+    display: block;
+  }
+  article {
+    width: 100%;
+  }
+}
+/* For tablets*/
