--- a/tyylit/resinfoStyle.css
+++ b/tyylit/resinfoStyle.css
@@ -5,13 +5,22 @@ html {
 }
 
 body {
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 0;
-  background-color: #fff;
+  margin-left: 15%;
+  margin-right: 15%;
+  justify-content: space-between;
+  justify-content: space-between;
+  border: 1px solid #fff;
+  box-shadow: 0.1rem 0.1rem 0.5rem 0.5rem #5687;
+  padding: 10px;
+}
+header {
+  background-color: #216477;
+  text-align: center;
+  padding: 1px;
+  color: #fff;
 }
 
-header {
+main header {
   background-color: #216477;
   padding: 1rem;
   color: #fff;
@@ -47,6 +56,7 @@ article h1 {
 }
 .text {
   flex-direction: column-reverse;
+  max-width: 50%;
 }
 /*NavBar styles*/
 .nav-bar {
@@ -88,7 +98,7 @@ article h1 {
   background-color: #12313a;
 }
 
-#map {
+#small-map {
   height: 400px;
   max-height: 400px;
 }
