--- a/tyylit/style.css
+++ b/tyylit/style.css
@@ -1,3 +1,7 @@
+/*
+Tekijä: Tristan Ellenberg, Niko Mäenpää ja Joonas Jouttijärvi
+Tarkoitus: Luoda visuaalisesti mielyttävä ja toimiva ulkoasu sivustolle.
+ */
 html {
   font-family: "Barlow", sans-serif;
   max-height: 100vh;
