--- a/tyylit/infoSivu.css
+++ b/tyylit/infoSivu.css
@@ -1,3 +1,7 @@
+/*
+Tekijä: Tristan Ellenberg
+Tarkoitus: Sivun tyylittelyt eri näytöille.
+ */
 html {
   font-family: "Barlow", sans-serif;
   max-height: 100vh;
