--- a/tyylit/resinfoStyle.css
+++ b/tyylit/resinfoStyle.css
@@ -1,3 +1,7 @@
+/*
+Tekijä: Tristan Ellenberg
+Tarkoitus: Ravintolan lisätiedot sivun tyylit.
+ */
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap");
 html {
   font-family: "Barlow", sans-serif;
